@@ -1,3 +1,9 @@
+2011-07-21  vadim  <vadim@netcitadel.com>
+
+	* FindObjectWidget.cpp (matchAttr): see #2516 "Enhance Find to
+	include searching for IP addresses in ranges". Function "find"
+	now finds ip addresses inside address ranges.
+
 2011-07-20  vadim  <vadim@netcitadel.com>
 
 	* FWBTree.cpp (init_statics): see #2619 "Attempting to
